[macOS] TestWebKitAPI.WebKit.MigrateLocalStorageDataToGeneralStorageDirectory is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=237065 <rdar://problem/89324250>

Reviewed by Alexey Proskuryakov.

Source/WebKit:

Commit transactions of SQLiteStorageArea at exit of network process.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::didClose):
* NetworkProcess/storage/SQLiteStorageArea.cpp:
(WebKit::commitTransactionsAtExit):
(WebKit::SQLiteStorageArea::SQLiteStorageArea):
(WebKit::SQLiteStorageArea::startTransactionIfNecessary):
(WebKit::SQLiteStorageArea::commitTransactionIfNecessary):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/WebsiteDataStoreCustomPaths.mm:
(TEST):



Canonical link: https://commits.webkit.org/247822@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290544 268f45cc-cd09-0410-ab3c-d52691b4dbfc