Source/WebKit/NetworkProcess/NetworkProcess.cpp
@@ -261,9 +261,10 @@ void NetworkProcess::didClose(IPC::Connection&)
         stopRunLoop();
     });
 
-    // Make sure we flush all cookies to disk before exiting.
     forEachNetworkSession([&] (auto& session) {
         platformFlushCookies(session.sessionID(), [callbackAggregator] { });
+        if (auto* storageManager = session.storageManager())
+            storageManager->syncLocalStorage([callbackAggregator] { });
     });
 }
 
