Source/WebKit/NetworkProcess/storage/SQLiteStorageArea.cpp
@@ -62,13 +62,32 @@ ASCIILiteral SQLiteStorageArea::statementString(StatementType type) const
     return ""_s;
 }
 
+static Lock allTransactionsLock;
+static HashSet<WebCore::SQLiteTransaction*>& allTransactions() WTF_REQUIRES_LOCK(allTransactionsLock)
+{
+    static NeverDestroyed<HashSet<WebCore::SQLiteTransaction*>> transactions;
+    return transactions;
+}
+
+static void commitTransactionsAtExit()
+{
+    Locker lock { allTransactionsLock };
+    for (auto* transaction : allTransactions())
+        transaction->commit();
+}
+
 SQLiteStorageArea::SQLiteStorageArea(unsigned quota, const WebCore::ClientOrigin& origin, const String& path, Ref<WorkQueue>&& workQueue)
     : StorageAreaBase(quota, origin)
     , m_path(path)
     , m_queue(WTFMove(workQueue))
     , m_cachedStatements(static_cast<size_t>(StatementType::Invalid))
 {
-    ASSERT(!isMainRunLoop());  
+    ASSERT(!isMainRunLoop());
+
+    static std::once_flag once;
+    std::call_once(once, [] {
+        std::atexit(commitTransactionsAtExit);
+    });
 }
 
 void SQLiteStorageArea::close()
@@ -186,16 +205,18 @@ void SQLiteStorageArea::startTransactionIfNecessary()
     if (!m_transaction)
         m_transaction = makeUnique<WebCore::SQLiteTransaction>(*m_database);
 
-    if (m_transaction->inProgress())
-        return;
-
-    m_transaction->begin();
-    m_queue->dispatchAfter(transactionDuration, [weakThis = WeakPtr { *this }] {
-        if (!weakThis || !weakThis->m_transaction)
+    {
+        Locker lock { allTransactionsLock };
+        if (m_transaction->inProgress())
             return;
-    
-        auto transaction = std::exchange(weakThis->m_transaction, nullptr);
-        transaction->commit();
+
+        m_transaction->begin();
+        allTransactions().add(m_transaction.get());
+    }
+
+    m_queue->dispatchAfter(transactionDuration, [weakThis = WeakPtr { *this }] {
+        if (weakThis)
+            weakThis->commitTransactionIfNecessary();
     });
 }
 
@@ -398,8 +419,13 @@ Expected<void, StorageError> SQLiteStorageArea::clear(IPC::Connection::UniqueID 
 
 void SQLiteStorageArea::commitTransactionIfNecessary()
 {
-    if (auto transaction = std::exchange(m_transaction, nullptr))
-        transaction->commit();
+    auto transaction = std::exchange(m_transaction, nullptr);
+    if (!transaction)
+        return;
+
+    Locker lock { allTransactionsLock };
+    transaction->commit();
+    allTransactions().remove(transaction.get());
 }
 
 void SQLiteStorageArea::handleLowMemoryWarning()
